# search-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  main.rs  parse.rs  search.rs
